
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int conn ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 char* mysql_error (int ) ;
 int mysql_free_result (scalar_t__) ;
 scalar_t__ mysql_query (int ,char*) ;
 scalar_t__ mysql_store_result (int ) ;
 int printf (char*,char*) ;
 scalar_t__ res ;
 int stderr ;

void mysql_cmd(char *sql_cmd, int silent) {

    if (!silent) {
     printf("%s \n", sql_cmd);
    }
    if (mysql_query(conn, sql_cmd)) {
        fprintf(stderr, "%s\n", mysql_error(conn));
        exit(1);
    }
    res = mysql_store_result(conn);
    if (res>0) mysql_free_result(res);

}
