; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40678.c_mysql_cmd.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_40678.c_mysql_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%s \0A\00", align 1
@conn = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@res = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mysql_cmd(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %8)
  br label %10

10:                                               ; preds = %7, %2
  %11 = load i32, i32* @conn, align 4
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @mysql_query(i32 %11, i8* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %10
  %16 = load i32, i32* @stderr, align 4
  %17 = load i32, i32* @conn, align 4
  %18 = call i8* @mysql_error(i32 %17)
  %19 = call i32 @fprintf(i32 %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %10
  %22 = load i32, i32* @conn, align 4
  %23 = call i64 @mysql_store_result(i32 %22)
  store i64 %23, i64* @res, align 8
  %24 = load i64, i64* @res, align 8
  %25 = icmp sgt i64 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i64, i64* @res, align 8
  %28 = call i32 @mysql_free_result(i64 %27)
  br label %29

29:                                               ; preds = %26, %21
  ret void
}

declare dso_local i32 @printf(i8*, i8*) #1

declare dso_local i64 @mysql_query(i32, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i8* @mysql_error(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @mysql_store_result(i32) #1

declare dso_local i32 @mysql_free_result(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
